--- a/config/local.yaml
+++ b/config/local.yaml
@@ -4,5 +4,5 @@
     address: "localhost:8082"
     timeout: 4s
     idle_timeout: 60s
-    user: "my_user"
-    password: "my_pass"
+    user: "myuser"
+    password: "mypass"
