--- a/config/local.yaml
+++ b/config/local.yaml
@@ -6,3 +6,7 @@
     idle_timeout: 60s
     user: "myuser"
     password: "mypass"
+  url_storage:
+    address: "localhost:5051"
+    timeout: 4s
+    retries: 3
